--- a/APBD6/APBD6/appsettings.json
+++ b/APBD6/APBD6/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=APBD5;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
